FIX #26 body BG color on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,6 @@ body {
   body {
     padding-left: 4px;
     padding-right: 4px;
+    background-color: #1e1e1e;
   }
 }
